--- a/css/search.css
+++ b/css/search.css
@@ -1,41 +1,171 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300);
 
-*, *:before, *:after{
-  box-sizing: border-box;
-  font: 300 1em/1.5 'Open Sans', 'Helvetica Neue', Arial, sans-serif; color: #666;
-  padding: 0; margin: 0;
+.search-wrapper {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left:50%;
+    /* top:50%;
+     */
+}
+.search-wrapper.active {}
+
+.search-wrapper .input-holder {    
+    height: 70px;
+    width:70px;
+    overflow: hidden;
+    background: rgba(255,255,255,0);
+    border-radius:6px;
+    position: relative;
+    transition: all 0.3s ease-in-out;
 }
 
-section.search-container{
-    width: 40%;
-    min-width: 300px;
-    margin: 20% auto;
+.search-wrapper.active .input-holder {
+    width:700px;
+    border-radius: 50px;
+    background: rgba(0,0,0,0.5);
+    transition: all .5s cubic-bezier(0.000, 0.105, 0.035, 1.570);
 }
 
-label{
-    display: none;
+.search-wrapper .input-holder .search-input {
+    width:100%;
+    height: 50px;
+    padding:0px 70px 0 20px;
+    opacity: 0;
+    position: absolute;
+    top:0px;
+    left:0px;
+    background: transparent;
+    box-sizing: border-box;
+    border:none;
+    outline:none;
+    font-family:"Open Sans", Arial, Verdana;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    color:#FFF;
+    transform: translate(0, 60px);
+    transition: all .3s cubic-bezier(0.000, 0.105, 0.035, 1.570);
+    transition-delay: 0.3s;
 }
 
-input.search_bar{
-    border: none; outline: none;
-    width: 75px;
-    border-radius: 55px;
-    margin: 0 auto;
-    font-size: 2em; color: #0d2840;
-    padding: 25px 70px 25px 35px;
-    transition: all .3s cubic-bezier(0,0,.5,1.5);
-    box-shadow: 0 3px 10px -2px rgba(0,0,0,.1);
-    background: rgb(255, 255, 255) url(https://i.imgur.com/seveWIw.png) no-repeat center center;
+.search-wrapper.active .input-holder .search-input {
+    opacity: 1;
+    transform: translate(0, 10px);
 }
-    
-input.search_bar:focus{
-    width: 100%;
-    background-position: calc(100% - 35px) center;
+
+.search-wrapper .input-holder .search-icon {
+    width:70px;
+    height:70px;
+    border:none;
+    border-radius:6px;
+    background: #FFF;
+    padding:0px;
+    outline:none;
+    position: relative;
+    z-index: 2;
+    float:right;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
 }
-    /*Removes default x in search fields (webkit only i guess)*/
-    input[type=search]::-webkit-search-cancel-button{-webkit-appearance: none;}
-    /*Changes the color of the placeholder*/
-    ::-webkit-input-placeholder{color: #0d2840; opacity: .5;}
-    :-moz-placeholder{color: #0d2840; opacity: .5;}
-    ::-moz-placeholder{color: #0d2840; opacity: .5;}
-    :-ms-input-placeholder{color: #0d2840; opacity: .5;}
+
+.search-wrapper.active .input-holder .search-icon {
+    width: 50px;
+    height:50px;
+    margin: 10px;
+    border-radius: 30px;
+}
+
+.search-wrapper .input-holder .search-icon span {
+    width:22px;
+    height:22px;
+    display: inline-block;
+    vertical-align: middle;
+    position:relative;
+    transform: rotate(45deg);
+    transition: all .4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
+}
+
+.search-wrapper.active .input-holder .search-icon span {
+    transform: rotate(-45deg);
+}
+
+.search-wrapper .input-holder .search-icon span::before, .search-wrapper .input-holder .search-icon span::after {
+    position: absolute; 
+    content:'';
+}
+
+.search-wrapper .input-holder .search-icon span::before {
+    width: 4px;
+    height: 11px;
+    left: 8px;
+    top: 17px;
+    border-radius: 2px;
+    background: #FE5F55;
+}
+
+.search-wrapper .input-holder .search-icon span::after {
+    width: 20px;
+    height: 20px;
+    left: 0px;
+    top: 0px;
+    border-radius: 30px;
+    border: 4px solid #FE5F55;
+}
+
+.search-wrapper .close {
+    position: absolute;
+    z-index: 1;
+    top:24px;
+    right:20px;
+    width:25px;
+    height:25px;
+    cursor: pointer;
+    transform: rotate(-180deg);
+    transition: all .3s cubic-bezier(0.285, -0.450, 0.935, 0.110);
+    transition-delay: 0.2s;
+}
+
+.search-wrapper.active .close {
+    right:-50px;
+    transform: rotate(45deg);
+    transition: all .6s cubic-bezier(0.000, 0.105, 0.035, 1.570);
+    transition-delay: 0.5s;
+}
+
+.search-wrapper .close::before, .search-wrapper .close::after {
+    position:absolute;
+    content:'';
+    background: #FE5F55;
+    border-radius: 2px;
+}
+
+.search-wrapper .close::before {
+    width: 5px;
+    height: 25px;
+    left: 10px;
+    top: 0px;
+}
+
+.search-wrapper .close::after {
+    width: 25px;
+    height: 5px;
+    left: 0px;
+    top: 10px;
+}
+
+@media only screen and (max-width: 1100px) {
+    .search-wrapper.active .input-holder {
+        width:600px;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .search-wrapper.active .input-holder {
+        width:400px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .search-wrapper.active .input-holder {
+        width:250px;
+    }
+}
