--- a/css/card.css
+++ b/css/card.css
@@ -40,6 +40,17 @@
   transition: transform .6s 1s;
 }
 
+.overlay {
+  border: 1px solid var(--background-color);
+  border-radius: 1.7rem;
+  background-color: rgba(248, 247, 216, 0.7);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 @media only screen and (max-width: 1100px) {
     .container{
         width: 24rem;
@@ -97,8 +108,8 @@
 }
 
 .container p {
-  color: hsla(0, 0%, 100%, .6);
-  font-size: 2.2rem;
+  color: rgba(0, 0, 0, 0.774);
+  font-size: 3.2rem;
 }
 
 .wrap:hover .container::before,
