css of cards, popular's logics, card generations, working on modal

--- a/css/card.css
+++ b/css/card.css
@@ -117,3 +117,10 @@
   width: calc(100% - 4rem);
   height: calc(100% - 4rem);
 }
+
+.flex{
+  display: flex;
+  flex-wrap: wrap;
+  flex-flow: space-evenly;
+}
+
